--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "langchain>=0.1.0",
     "langgraph>=0.0.40",
-    "langchain-anthropic>=0.1.0",
+    "langchain-openai>=0.2.0",
     "langchain-community>=0.0.20",
     "gradio>=4.0.0",
     "beautifulsoup4>=4.12.0",
