dont check cov yet

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
         run: uv run ruff check
 
       - name: Run Pytest
-        run: uv run pytest --cov=src
+        run: uv run pytest
